# DUCKDB-extension-template

./: CMakeLists.txt  readme.md
src/: llm_metrics_extension.cpp  quack_extension.cpp
